uri.toURL() has to be better than new URL(uri.toString())